<?xml version="1.0"?>
<package>
  <name>roslay</name>
  <version>0.0.1</version>
  <description>The roslay package</description>

  <maintainer email="cto@lxrobotics.com">Alexander Entinger</maintainer>

  <license>Proprietary</license>

  <url type="website">https://github.com/lxrobotics/roslay</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
